fixes to taunus and overflows

--- a/client/css/view-components/de-aside.styl
+++ b/client/css/view-components/de-aside.styl
@@ -24,6 +24,3 @@
 @media screen and (min-width: 768px)
   .de-back
     display none
-
-  .de-bio
-    overflow hidden
